# dbTBA

./: .gitignore  configure
cnf/: configure.in
doc/database/: db_model.mwb
src/: Makefile.in  act.offensive.c  act.other.c  act.wizard.c  class.c  comm.c  db.c  db.h  dg_event.h  dg_handler.c  dg_scripts.c  dg_scripts.h  dg_variables.c  fight.c  genmob.c  genwld.c  handler.c  house.c  interpreter.c  interpreter.h  limits.c  magic.c  medit.c  modify.c  mysql_db.c  mysql_db.h  mysql_players.c  mysql_players.h  objsave.c  players.c  players.h  spell_parser.c  spells.c  spells.h  structs.h  utils.c  utils.h
